# Matrix-autumn-2022

./: CMakeLists.txt
api/: Matrix.hpp  String.hpp  Vector.hpp
src/: Broadcasting.cpp  GetData.cpp  Matrix.cpp  MatrixСalculations.cpp  ScalarСalculations.cpp  String.cpp  Vector.cpp
tests/: BroadcastingTests.cpp  GetDataTests.cpp  MatrixCalculationsTests.cpp  MatrixTest.cpp  ScalarCalculationsTests.cpp  StringTest.cpp  VectorTest.cpp
